# aoc2020

./: .gitignore  Cargo.toml  README.md  pre-commit.sh
src/: day02.rs  day04.rs  day06.rs  day07.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day21.rs  day22.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs  lib.rs
