[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Kai Berszin <mail@kaibersz.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
"regex" = "1.4.2"
"lazy_static" = "1.4.0"
"scan_fmt" = "0.2.5"
"fancy-regex" = "0.4.1"